--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "chokidar": "~0.8.2",
-    "theorist": "~1.0.1"
+    "theorist": "~1.0.1",
+    "lodash": "~2.4.1",
+    "envify": "~1.2.1",
+    "react-atom-fork": "~0.10.0",
+    "reactionary-atom-fork": "~0.9.0"
   }
 }
