--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/radicaled/dart-tools",
   "license": "MIT",
   "engines": {
-    "atom": ">0.106.0"
+    "atom": ">=0.116.0"
   },
   "constributors": [
     "Arron Washington <arron@theradicaledwards.com>"
