--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-atom-fork": "~0.10.0",
     "reactionary-atom-fork": "~0.9.0",
     "stream-splitter": "~0.3.0",
-    "pathwatcher": "~2.0.7"
+    "pathwatcher": "~2.0.7",
+    "q": "^1.0.1"
   }
 }
