--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dart-tools",
   "main": "./lib/dart-tools",
   "version": "0.8.2",
-  "description": "Various tools for Dart in Atom",
+  "description": "Dart Tooling for Atom",
   "repository": "https://github.com/radicaled/dart-tools",
   "license": "MIT",
   "engines": {
