--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/radicaled/dart-tools",
   "license": "MIT",
   "engines": {
-    "atom": ">=0.127.0"
+    "atom": ">=0.180.0"
   },
   "constributors": [
     "Arron Washington <arron@theradicaledwards.com>"
@@ -18,7 +18,7 @@
     "react-atom-fork": "~0.10.0",
     "reactionary-atom-fork": "~0.9.0",
     "stream-splitter": "~0.3.0",
-    "pathwatcher": "~2.0.7",
+    "pathwatcher": "3.3.1",
     "q": "^1.0.1"
   }
 }
