--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     }
   },
   "dependencies": {
+    "atom-space-pen-views": "^2.0.3",
     "envify": "~1.2.1",
     "fuzzaldrin": "^2.1.0",
     "lodash": "~2.4.1",
