--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "atom-space-pen-views": "^2.0.3",
     "envify": "~1.2.1",
+    "event-kit": "^1.1.0",
     "fuzzaldrin": "^2.1.0",
     "lodash": "~2.4.1",
-    "pathwatcher": "3.3.1",
+    "pathwatcher": "4.4.0",
     "q": "^1.0.1",
     "react-atom-fork": "~0.10.0",
     "reactionary-atom-fork": "~0.9.0",
+    "rivets": "^0.8.1",
     "stream-splitter": "~0.3.0",
     "theorist": "~1.0.1"
   }
