--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ notifications:
     on_success: never
     on_failure: change
 
+before_script: npm install coffeelint
+
 script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
 
 git:
