--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ notifications:
     on_success: never
     on_failure: change
 
-env:
-  - APM_TEST_PACKAGES="autocomplete-plus coffeelint"
-
-script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
+script:
+  - npm install coffeelint
+  - 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
 
 git:
   depth: 10
