--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-atom-fork": "~0.10.0",
     "reactionary-atom-fork": "~0.9.0",
     "rivets": "^0.8.1",
-    "stream-splitter": "~0.3.0"
+    "stream-splitter": "~0.3.0",
+    "which": "^1.1.1"
   }
 }
